--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
     <div class="wrap">
-        <form>
+        <form method="post" action="/hello">
             <div class="form-group">
                 <label for="exampleFormControlSelect1">Select Output Type</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="exampleFormControlSelect1" name="data_type">
                     <option>Schema</option>
                     <option>Select</option>
                     <option>Record</option>
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Insert Data</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="20"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="20" name="id"></textarea>
             </div>
             <button type="submit" class="btn btn-outline-primary">Send</button>
             <button type="reset" class="btn btn-outline-primary">Reset</button>
