--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,15 +18,8 @@
     <div class="wrap">
         <form method="post" action="/hello">
             <div class="form-group">
-                <label for="exampleFormControlSelect1">Select Output Type</label>
-                <select class="form-control" id="exampleFormControlSelect1" name="data_type">
-                    <option>Schema</option>
-                    <option>Select</option>
-                    <option>Record</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="exampleFormControlTextarea1">Insert Data</label>
+                <h3 for="exampleFormControlTextarea1">Insert Data</h3>
+                <h4 style="color: tomato;">Please do not insert gap ! </h4>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="20" name="id"></textarea>
             </div>
             <button type="submit" class="btn btn-outline-primary">Send</button>
